--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ main ] # Trigger the action on push to the main branch
+    branches: [ master ] # Trigger the action on push to the main branch
   workflow_dispatch:
 
 jobs:
